EditInHtml1.html - overflow: hidden; resize: both;

--- a/download/EditInHtml1.html
+++ b/download/EditInHtml1.html
@@ -82,8 +82,9 @@ img.intLink { border: 0; }
   width: 560px;
   height: 400px;
   border: 1px #000000 solid;
-  padding: 12px;
-  overflow: scroll;
+  padding: 8px;
+  overflow: hidden;/*: scroll;*/
+  resize: both;
 }
 #textBox #sourceText {
   padding: 0;
