--- a/download/EditInHtml1.html
+++ b/download/EditInHtml1.html
@@ -114,6 +114,7 @@ img.intLink { border: 0; }
 <option class="heading" selected>- font -</option>
 <option>Arial</option>
 <option>Arial Black</option>
+<option>Verdana</option>
 <option>Courier New</option>
 <option>Times New Roman</option>
 </select>
