--- a/download/EditInHtml1.html
+++ b/download/EditInHtml1.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html  lang="en">
+<html  lang="pl">
 <head>
 <meta charset="UTF-8"/>
 <title>Rich Text Editor</title>
-<script type="text/javascript">
+<script>
 var oDoc, sDefTxt;
 
 function initDoc() {
@@ -74,7 +74,7 @@ function toHTML() {
 }
 function destroyClickedElement(event){document.body.removeChild(event.target);}
 </script>
-<style type="text/css">
+<style>
 .intLink { cursor: pointer; }
 img.intLink { border: 0; }
 #toolBar1 select { font-size:10px; }
@@ -137,12 +137,12 @@ img.intLink { border: 0; }
 </select>
 <select onchange="formatDoc('backcolor',this[this.selectedIndex].value);this.selectedIndex=0;">
 <option class="heading" selected>- background -</option>
-<option value="White"  style="background-color:White"  >White</option>
-<option value="Yellow" style="background-color:Yellow" >Yellow</option>
-<option value="Aqua"   style="background-color:Aqua"   >Aqua</option>
-<option value="Lime"   style="background-color:Lime"   >Lime</option>
-<option value="Fuchsia"style="background-color:Fuchsia">Fuchsia</option>
-<option value="Silver" style="background-color:Silver" >Silver</option>
+<option value="White"   style="background-color:White"  >White</option>
+<option value="Yellow"  style="background-color:Yellow" >Yellow</option>
+<option value="Aqua"    style="background-color:Aqua"   >Aqua</option>
+<option value="Lime"    style="background-color:Lime"   >Lime</option>
+<option value="Fuchsia" style="background-color:Fuchsia">Fuchsia</option>
+<option value="Silver"  style="background-color:Silver" >Silver</option>
 </select>
 </div>
 <div id="toolBar2">
