**Czytnik** z użyciem kamery koputera/laptopa (o1) jsQR_Demo1.html

--- a/download/QRcode1.html
+++ b/download/QRcode1.html
@@ -83,11 +83,11 @@ Plik QRcode1.html należy otworzyć w jakieś przeglądarce np. Firefox albo Chr
 <li> wkleić treść,
 </li><li> kliknąć "Generuj QR-kod"
 </li><li> kliknąć prawym klawiszem na obrazku QR-kodu i wybrać "skopiuj obraz"
-</li><li> wkleić to gdzieś w dokumencie doc/docx/odt/xls... Warto ustawić opływanie obrazka - prawy kl. myszy - opływanie - opływanie optymalne (albo ramka w MS Word).
+</li><li> wkleić to gdzieś w dokumencie doc/docx/odt/xls... Można też wkleić do programu graficznego np. Paint i potem skopiować do MS Word. Warto ustawić opływanie obrazka - prawy kl. myszy - opływanie - opływanie optymalne (albo ramka w MS Word).
 </li>
 </ul>
 <p>
-Działanie nie wymaga dostępu do internetu. Czytniki QR na ogół już są w aplikacji aparatu telefonu- wystarczy włączyć aparat i objąć widokiem obrazek kodu a pojawia się np. przycisk "Pokaż dane". Jeszcze wygodniejsze jest korzystanie z aplikacji np. "Czytnik QR" firmy TeaCapps (od razu pokazuje się tekst, a dodatkowo mamy zapamiętaną historię tekstów)
+Działanie nie wymaga dostępu do internetu. Czytniki QR na ogół już są w aplikacji aparatu telefonu- wystarczy włączyć aparat i objąć widokiem obrazek kodu a pojawia się np. przycisk "Pokaż dane". Jeszcze wygodniejsze jest korzystanie z aplikacji np. "Czytnik QR" firmy TeaCapps (od razu pokazuje się tekst, a dodatkowo mamy zapamiętaną historię tekstów). Można też skorzystać z kamery komputera/laptopa: <a href="./jsQR_Demo1.html">jsQR_Demo1.html</a> (<a href="./jsQR_Demo1.zip">...zip</a>).
 </p>
 <p>
 Aby zakodować lokalizację geograficzną w QR-kodzie należy przed współrzędnymi dopisać "geo:" (uwaga - to musi być osobny obrazek QR-kodu), np.:<br />
