informacja o pliku "test.png"

--- a/download/jsQR_Demo1img.html
+++ b/download/jsQR_Demo1img.html
@@ -36,7 +36,7 @@
   <button id='readBytesButton0'>Ponownie generuj plik wynikowy</button> 
 </span>
 </div>
-<p><span class="instr">Uwaga - jeśli uruchamiasz lokalny plik HTML to plik z obrazem QR-kodu musi być w tym samym folderze co plik HTML ! </span>
+<p><span class="instr">Uwaga - ta aplikacja działa jako lokalny plik HTML (off-line) i plik z obrazem QR-kodu musi być w tym samym folderze co plik HTML ! </span>
 <span id="oPliku">Nie odczytano żadnego pliku</span></p></p>
 <hr/>
 <div id="output">
