--- a/download/QRcode1.html
+++ b/download/QRcode1.html
@@ -88,13 +88,14 @@ Plik QRcode1.html należy otworzyć w jakieś przeglądarce np. Firefox albo Chr
 </li>
 </ul>
 <p>
-Plik działa w trybie off-line - nie wymaga dostępu do internetu. Czytniki QR na ogół już są w aplikacji aparatu telefonu- wystarczy włączyć aparat i objąć widokiem obrazek kodu a pojawia się np. przycisk "Pokaż dane". Jeszcze wygodniejsze jest korzystanie z aplikacji np. "Czytnik QR" firmy TeaCapps (od razu pokazuje się tekst, a dodatkowo mamy zapamiętaną historię tekstów). Można też skorzystać z kamery komputera/laptopa: <a href="./jsQR_Demo1cam.html">jsQR_Demo1cam.html</a> (<a href="./jsQR_Demo1cam.zip">...zip</a>) albo z QR-kodu w pliku graficznym, np. skanie: <a href="./jsQR_Demo1img.zip">jsQR_Demo1img.zip</a>.
+Plik działa w trybie off-line - nie wymaga dostępu do internetu. 
 </p>
 <p>
-Aby zakodować lokalizację geograficzną w QR-kodzie należy przed współrzędnymi dopisać "geo:" (uwaga - to musi być osobny obrazek QR-kodu), np.:<br />
-geo:50.03758,22.00417
+Czytniki QR na ogół już są w aplikacji aparatu telefonu- wystarczy włączyć aparat i objąć widokiem obrazek kodu a pojawia się np. przycisk "Pokaż dane". Jeszcze wygodniejsze jest korzystanie z aplikacji np. "Czytnik QR" firmy TeaCapps (od razu pokazuje się tekst, a dodatkowo mamy zapamiętaną historię tekstów). Można też skorzystać z kamery komputera/laptopa: <a href="./jsQR_Demo1cam.html">jsQR_Demo1cam.html</a> (<a href="./jsQR_Demo1cam.zip">...zip</a>) albo z QR-kodu w pliku graficznym, np. skanie: <a href="./jsQR_Demo1img.zip">jsQR_Demo1img.zip</a>.
 </p>
 <p>
+Aby zakodować lokalizację geograficzną w QR-kodzie należy przed współrzędnymi dopisać "geo:" (uwaga - to musi być osobny obrazek QR-kodu), np.:
+<code style="border-bottom: 1px dotted;">geo:50.03758,22.00417</code> <br> 
 Skąd wziąć współrzędne? - Na mapie Google w Androidzie przytrzymujemy dłużej palec na miejscu, które nas interesuje, a w pasku adresu pojawiają się współrzędne geo. W Windows na <a href="https://www.google.pl/maps/">mapie Google</a> prawy kl. myszy, menu "Co tu jest?"; w <a href="https://www.openstreetmap.org/search?whereami=1&query=52.22873%2C21.00290">OpenStreetMap</a> prawy kl. myszy, menu "Pokaż adres"; w <a href="http://mapy.geoportal.gov.pl/imap/?identifyAddress=Warszawa,Jerozolimskie%2054">geoportalu</a> współrzędne są pod aktualnym kursorem myszy (zauważmy, że można wpisać adres administracyjny w pasku https").
 </p>
 </footer>
