--- a/download/jsQR_Demo1cam.html
+++ b/download/jsQR_Demo1cam.html
@@ -4,10 +4,11 @@
   <title>jsQR Demo 1</title>
   <!-- <script src="jsQR%20Demo_pliki/jsQR.min.js"></script> -->
 <style>
-body {font-family: sans-serif; color: #333; max-width: 640px; margin: 0 auto; position: relative;}
+body {color: #333; max-width: 800px; margin: 0 auto; position: relative;}
 #githubLink {position: absolute; right: 0; top: 10px; color: #2D99FF;}
-h1 {margin: 10px 0; font-size: 40px;}
+h1 {margin: 10px 0; font-size: 30px;}
 #loadingMessage {text-align: center; padding: 40px; background-color: #eee;}
+.centr {width: 60%;  margin: 0 auto;}
 #canvas {width: 100%;}
 #output {margin-top: 20px; background: #eee; padding: 10px; padding-bottom: 0;}
 #output div {padding-bottom: 10px; word-wrap: break-word;}
@@ -22,7 +23,9 @@ h1 {margin: 10px 0; font-size: 40px;}
   <input type="button" value="STOP" id="stopBtn"  hidden="" />
   <p>Pure JavaScript decoding library of <a href="http://www.denso-wave.com/qrcode/faqpatent-e.html">QR code (® Denso Wave Incorporated)</a>.</p>
   <div id="loadingMessage" hidden="">⌛ Loading video...</div>
+  <div class="centr">
   <canvas id="canvas" height="480" width="640"></canvas>
+  </div>
   <div id="output">
     <div id="outputMessage">No QR code detected.</div>
     <div hidden="">
@@ -77,7 +80,8 @@ function stopStreamedVideo() {
   video.srcObject = null;
   canvas.clearRect(0, 0, canvasElement.width, canvasElement.height);
   stopBtn.hidden = true;
-  outputMessage.innerHTML = outputData.innerHTML = 'Restart: <b>F5</b> or <b>Ctrl+R</b>';
+  outputMessage.hidden = false;
+  outputMessage.innerHTML = 'Restart: <b>F5</b> or <b>Ctrl+R</b>';
   cancelAnimationFrame(animFrameId);
 }
 
@@ -114,7 +118,7 @@ function tick() {
         outputData.className = 'highlight';
       } else {
         outputData.className = '';
-        outputHistData.innerHTML += '<br>'+tmpLastData +'<br><hr>';
+        outputHistData.innerHTML += tmpLastData +'<br><hr>';
         outputData.innerHTML = tmpActData
         tmpLastData = tmpActData;
       }
