--- a/download/MultiRegExpRepl.html
+++ b/download/MultiRegExpRepl.html
@@ -34,10 +34,9 @@
 <body>  
   <h2>Formularz zmiany tekstu na podstawie wielokrotnych <a href="https://developer.mozilla.org/pl/docs/Web/JavaScript/Referencje/Obiekty/RegExp">wyrażeń regularnych</a></h2>
   <p>
-  Formularz działa też w trybie off-line. Tylko z wykorzystaniem silnika przeglądarki. Nic nie jest wysyłane do Internetu. Wszystko jest w pojedynczym pliku HTML.</p>
+  Formularz działa w trybie off-line - tylko z wykorzystaniem silnika przeglądarki. Nic nie jest wysyłane do Internetu. Wszystko jest w pojedynczym pliku HTML.</p>
   <p>
-  Wypróbuj czy to działa - tj. czy tekst jest przetwarzany wg. podanych wyrażeń regularnych. Wstaw dane i swoją konfigurację. Można to potem zapisać jako nowy plik HTML w Firefox. Można też podstawić swoją nową konfigurację w <code> &lt;textarea id="regExpPat" ... </code>  w kopii tego pliku HTML. <small><br>
-  Przed zapisaniem nowej wersji warto usunąć tekst pierwotny.</small> </p>
+  Wypróbuj czy to działa - tj. czy tekst jest przetwarzany wg. podanych wyrażeń regularnych. Wstaw dane i swoją konfigurację. Można to potem zapisać jako nowy plik HTML w Firefox. Można też podstawić swoją nową konfigurację w <code> &lt;textarea id="regExpPat" ... </code>  w kopii tego pliku HTML. </p>
   <div>
     <div>
       <h3> Tekst pierwotny: </h3>
