--- a/download/ovHsrc.js.html
+++ b/download/ovHsrc.js.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 span {
 	font-family: 'Consolas';
-	font-size: 9pt;
+	font-size: 10pt;
 	color: #000000;
 }
 .sc0 {
@@ -18,51 +18,64 @@ span {
 	color: #008000;
 }
 .sc4 {
-	color: #FF0000;
+	color: #FF8000;
 }
 .sc5 {
 	font-weight: bold;
-	font-style: italic;
-	color: #000080;
+	color: #0000FF;
 }
 .sc7 {
 	color: #808080;
 }
 .sc10 {
 	font-weight: bold;
+	color: #000080;
 }
 .sc11 {
+}
+.sc16 {
+	color: #8000FF;
+}
+.sc19 {
+	font-weight: bold;
+	color: #804000;
 }
 </style>
 </head>
 <body>
 <div style="float: left; white-space: pre; line-height: 1; background: #FFFFFF; "><span class="sc10">(</span><span class="sc5">function</span><span class="sc10">()</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
-</span><span class="sc2">//https://makandracards.com/makandra/46962-javascript-bookmarklet-to-click-an-element-and-copy-its-text-contents
-</span><span class="sc0">  </span><span class="sc5">var</span><span class="sc0"> </span><span class="sc1">/*overlay*/</span><span class="sc0"> </span><span class="sc11">ov</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc11">document</span><span class="sc10">.</span><span class="sc11">createElement</span><span class="sc10">(</span><span class="sc7">'div'</span><span class="sc10">);</span><span class="sc0">
-  </span><span class="sc11">Object</span><span class="sc10">.</span><span class="sc11">assign</span><span class="sc10">(</span><span class="sc11">ov</span><span class="sc10">.</span><span class="sc11">style</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
+  </span><span class="sc5">var</span><span class="sc0"> </span><span class="sc11">lastEl</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc5">null</span><span class="sc10">;</span><span class="sc0"> </span><span class="sc2">//last selected element
+//https://makandracards.com/makandra/46962-javascript-bookmarklet-to-click-an-element-and-copy-its-text-contents
+</span><span class="sc0">  </span><span class="sc5">var</span><span class="sc0"> </span><span class="sc1">/*overlay*/</span><span class="sc0"> </span><span class="sc11">ov</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc19">document</span><span class="sc10">.</span><span class="sc11">createElement</span><span class="sc10">(</span><span class="sc7">'div'</span><span class="sc10">);</span><span class="sc0">
+  </span><span class="sc16">Object</span><span class="sc10">.</span><span class="sc19">assign</span><span class="sc10">(</span><span class="sc11">ov</span><span class="sc10">.</span><span class="sc11">style</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
     </span><span class="sc11">position</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">'fixed'</span><span class="sc10">,</span><span class="sc0">
-    </span><span class="sc11">top</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc4">0</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc11">left</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc4">0</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc11">width</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">'100vw'</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc11">height</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">'100vh'</span><span class="sc10">,</span><span class="sc0">
+    </span><span class="sc19">top</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc4">0</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc11">left</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc4">0</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc11">width</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">'100vw'</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc11">height</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">'100vh'</span><span class="sc10">,</span><span class="sc0">
     </span><span class="sc11">zIndex</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc4">99999999</span><span class="sc10">,</span><span class="sc0">
     </span><span class="sc11">background</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">'transparent'</span><span class="sc10">,</span><span class="sc0">
     </span><span class="sc11">cursor</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">'crosshair'</span><span class="sc0">
   </span><span class="sc10">});</span><span class="sc0">
-  </span><span class="sc11">document</span><span class="sc10">.</span><span class="sc11">body</span><span class="sc10">.</span><span class="sc11">append</span><span class="sc10">(</span><span class="sc11">ov</span><span class="sc10">);</span><span class="sc0">
+  </span><span class="sc19">document</span><span class="sc10">.</span><span class="sc11">body</span><span class="sc10">.</span><span class="sc11">append</span><span class="sc10">(</span><span class="sc11">ov</span><span class="sc10">);</span><span class="sc0">
 
   </span><span class="sc5">function</span><span class="sc0"> </span><span class="sc11">getEl</span><span class="sc10">(</span><span class="sc11">ev</span><span class="sc10">)</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
     </span><span class="sc11">ov</span><span class="sc10">.</span><span class="sc11">style</span><span class="sc10">.</span><span class="sc11">pointerEvents</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc7">'none'</span><span class="sc10">;</span><span class="sc0">
-    </span><span class="sc5">var</span><span class="sc0"> </span><span class="sc11">el</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc11">document</span><span class="sc10">.</span><span class="sc11">elementFromPoint</span><span class="sc10">(</span><span class="sc11">ev</span><span class="sc10">.</span><span class="sc11">clientX</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc11">ev</span><span class="sc10">.</span><span class="sc11">clientY</span><span class="sc10">);</span><span class="sc0">
+    </span><span class="sc5">var</span><span class="sc0"> </span><span class="sc11">el</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc19">document</span><span class="sc10">.</span><span class="sc11">elementFromPoint</span><span class="sc10">(</span><span class="sc11">ev</span><span class="sc10">.</span><span class="sc11">clientX</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc11">ev</span><span class="sc10">.</span><span class="sc11">clientY</span><span class="sc10">);</span><span class="sc0">
+    </span><span class="sc5">if</span><span class="sc0"> </span><span class="sc10">(</span><span class="sc11">ev</span><span class="sc10">.</span><span class="sc11">shiftKey</span><span class="sc10">)</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
+      </span><span class="sc5">var</span><span class="sc0"> </span><span class="sc11">el0</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc11">el</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc11">i</span><span class="sc10">=</span><span class="sc4">4</span><span class="sc10">;</span><span class="sc0"> </span><span class="sc2">//4-1=3 parents up
+</span><span class="sc0">      </span><span class="sc5">while</span><span class="sc0"> </span><span class="sc10">((</span><span class="sc11">el0</span><span class="sc10">)</span><span class="sc0"> </span><span class="sc10">&amp;&amp;</span><span class="sc0"> </span><span class="sc10">(</span><span class="sc11">i</span><span class="sc10">--))</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc11">el</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc11">el0</span><span class="sc10">;</span><span class="sc0"> </span><span class="sc11">el0</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc11">el</span><span class="sc10">.</span><span class="sc11">parentElement</span><span class="sc10">;}</span><span class="sc0">
+    </span><span class="sc10">}</span><span class="sc0">
     </span><span class="sc11">ov</span><span class="sc10">.</span><span class="sc11">style</span><span class="sc10">.</span><span class="sc11">pointerEvents</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc7">'auto'</span><span class="sc10">;</span><span class="sc0">
     </span><span class="sc5">return</span><span class="sc0"> </span><span class="sc11">el</span><span class="sc10">;</span><span class="sc0">
   </span><span class="sc10">}</span><span class="sc0">
 
-  </span><span class="sc11">document</span><span class="sc10">.</span><span class="sc11">addEventListener</span><span class="sc10">(</span><span class="sc7">'mousemove'</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc5">function</span><span class="sc10">(</span><span class="sc11">ev</span><span class="sc10">)</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
+  </span><span class="sc19">document</span><span class="sc10">.</span><span class="sc11">addEventListener</span><span class="sc10">(</span><span class="sc7">'mousemove'</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc5">function</span><span class="sc10">(</span><span class="sc11">ev</span><span class="sc10">)</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
     </span><span class="sc5">var</span><span class="sc0"> </span><span class="sc11">el</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc11">getEl</span><span class="sc10">(</span><span class="sc11">ev</span><span class="sc10">);</span><span class="sc0">
     </span><span class="sc5">if</span><span class="sc0"> </span><span class="sc10">(!</span><span class="sc11">el</span><span class="sc10">)</span><span class="sc0"> </span><span class="sc5">return</span><span class="sc10">;</span><span class="sc0">
+    </span><span class="sc11">lastEl</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc11">el</span><span class="sc10">;</span><span class="sc0">
     </span><span class="sc5">var</span><span class="sc0"> </span><span class="sc1">/*position*/</span><span class="sc0"> </span><span class="sc11">po</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc11">el</span><span class="sc10">.</span><span class="sc11">getBoundingClientRect</span><span class="sc10">();</span><span class="sc0">
-    </span><span class="sc11">Object</span><span class="sc10">.</span><span class="sc11">assign</span><span class="sc10">(</span><span class="sc11">ov</span><span class="sc10">.</span><span class="sc11">style</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
+    </span><span class="sc16">Object</span><span class="sc10">.</span><span class="sc19">assign</span><span class="sc10">(</span><span class="sc11">ov</span><span class="sc10">.</span><span class="sc11">style</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
       </span><span class="sc11">background</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">'rgba(0, 128, 255, 0.25)'</span><span class="sc10">,</span><span class="sc0">
       </span><span class="sc11">outline</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">'1px solid rgba(0, 128, 255, 0.5)'</span><span class="sc10">,</span><span class="sc0">
-      </span><span class="sc11">top</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">''</span><span class="sc0"> </span><span class="sc10">+</span><span class="sc0"> </span><span class="sc11">po</span><span class="sc10">.</span><span class="sc11">top</span><span class="sc0"> </span><span class="sc10">+</span><span class="sc0"> </span><span class="sc7">'px'</span><span class="sc10">,</span><span class="sc0">
+      </span><span class="sc19">top</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">''</span><span class="sc0"> </span><span class="sc10">+</span><span class="sc0"> </span><span class="sc11">po</span><span class="sc10">.</span><span class="sc19">top</span><span class="sc0"> </span><span class="sc10">+</span><span class="sc0"> </span><span class="sc7">'px'</span><span class="sc10">,</span><span class="sc0">
       </span><span class="sc11">left</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">''</span><span class="sc0"> </span><span class="sc10">+</span><span class="sc0"> </span><span class="sc11">po</span><span class="sc10">.</span><span class="sc11">left</span><span class="sc0"> </span><span class="sc10">+</span><span class="sc0"> </span><span class="sc7">'px'</span><span class="sc10">,</span><span class="sc0">
       </span><span class="sc11">width</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">''</span><span class="sc0"> </span><span class="sc10">+</span><span class="sc0"> </span><span class="sc11">po</span><span class="sc10">.</span><span class="sc11">width</span><span class="sc0"> </span><span class="sc10">+</span><span class="sc0"> </span><span class="sc7">'px'</span><span class="sc10">,</span><span class="sc0">
       </span><span class="sc11">height</span><span class="sc10">:</span><span class="sc0"> </span><span class="sc7">''</span><span class="sc0"> </span><span class="sc10">+</span><span class="sc0"> </span><span class="sc11">po</span><span class="sc10">.</span><span class="sc11">height</span><span class="sc0"> </span><span class="sc10">+</span><span class="sc0"> </span><span class="sc7">'px'</span><span class="sc0">
@@ -70,12 +83,13 @@ span {
   </span><span class="sc10">});</span><span class="sc0">
 
   </span><span class="sc11">ov</span><span class="sc10">.</span><span class="sc11">addEventListener</span><span class="sc10">(</span><span class="sc7">'click'</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc5">function</span><span class="sc10">(</span><span class="sc11">ev</span><span class="sc10">)</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
-    </span><span class="sc5">var</span><span class="sc0"> </span><span class="sc11">tx</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc11">getEl</span><span class="sc10">(</span><span class="sc11">ev</span><span class="sc10">).</span><span class="sc11">outerHTML</span><span class="sc10">;</span><span class="sc0">
-    </span><span class="sc2">//ext = tx.replace(/\n[ \n]+\n/g, "\n").replace(/\n\n+/g, "\n\n").replace(/^\n+|\n+$/g, '');
+    </span><span class="sc2">//var tx = getEl(ev).outerHTML;
+</span><span class="sc0">    </span><span class="sc2">//ext = tx.replace(/\n[ \n]+\n/g, "\n").replace(/\n\n+/g, "\n\n").replace(/^\n+|\n+$/g, '');
 </span><span class="sc0">    </span><span class="sc2">//if (!tx.match("\n")) tx = tx.replace(/^ +| +$/, '')
 </span><span class="sc0">    </span><span class="sc2">//window.prompt('Press Ctrl+C to copy', tx);
-</span><span class="sc0">    </span><span class="sc11">document</span><span class="sc10">.</span><span class="sc11">body</span><span class="sc10">.</span><span class="sc11">removeChild</span><span class="sc10">(</span><span class="sc11">ov</span><span class="sc10">);</span><span class="sc0">
-    </span><span class="sc11">navigator</span><span class="sc10">.</span><span class="sc11">clipboard</span><span class="sc10">.</span><span class="sc11">writeText</span><span class="sc10">(</span><span class="sc11">tx</span><span class="sc10">);</span><span class="sc0">
+</span><span class="sc0">    </span><span class="sc5">var</span><span class="sc0"> </span><span class="sc11">tx</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc10">(</span><span class="sc11">lastEl</span><span class="sc0"> </span><span class="sc10">||</span><span class="sc0"> </span><span class="sc11">getEl</span><span class="sc10">(</span><span class="sc11">ev</span><span class="sc10">)).</span><span class="sc11">outerHTML</span><span class="sc10">;</span><span class="sc0">
+    </span><span class="sc19">document</span><span class="sc10">.</span><span class="sc11">body</span><span class="sc10">.</span><span class="sc11">removeChild</span><span class="sc10">(</span><span class="sc11">ov</span><span class="sc10">);</span><span class="sc0">
+    </span><span class="sc19">navigator</span><span class="sc10">.</span><span class="sc11">clipboard</span><span class="sc10">.</span><span class="sc11">writeText</span><span class="sc10">(</span><span class="sc11">tx</span><span class="sc10">);</span><span class="sc0">
   </span><span class="sc10">});</span><span class="sc0">
 </span><span class="sc10">})();</span></div></body>
 </html>
