html translate="no"

--- a/download/img2sigplus.js.html
+++ b/download/img2sigplus.js.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/strict.dtd">
-<html>
+<html lang="en" class="notranslate" translate="no">
 <head>
 <META http-equiv=Content-Type content="text/html; charset=UTF-8">
-<title>Exported from Notepad++</title>
+<title>img2sigplus.js</title>
 <style type="text/css">
 span {
 	font-family: 'Consolas';
