--- a/download/ovCp2.js.html
+++ b/download/ovCp2.js.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/strict.dtd">
 <html>
-<head>
+<html lang="en" class="notranslate" translate="no">
 <META http-equiv=Content-Type content="text/html; charset=UTF-8">
-<title>Exported from Notepad++</title>
+<title>ovCp2.js</title>
 <style type="text/css">
 span {
 	font-family: 'Consolas';
