--- a/download/jsQR_Demo1img.html
+++ b/download/jsQR_Demo1img.html
@@ -1,9 +1,16 @@
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="UTF-8">
+  <meta name="description" content="QR Code camera reader">
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
+
 <!DOCTYPE html>
 <html lang="pl"> <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=Utf-8">
+  <meta charset="UTF-8">
+  <meta name="description" content="QR Code camera reader">
+  <link rel="icon" type="image/png" href="favicon.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jsQR_Demo1img.html</title>
-  <link rel="shortcut icon" href="#">
   <style>
   p {margin: 3px 0;}
   #canvasLeyers {max-width: 640px; margin: 0 auto; position: relative; }
