--- a/download/jsQR_Demo1cam.html
+++ b/download/jsQR_Demo1cam.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta charset="UTF-8">
+  <meta name="description" content="QR Code camera reader">
+  <link rel="icon" type="image/png" href="favicon.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jsQR Demo 1 camera</title>
 <style>
