--- a/download/QRcode1.html
+++ b/download/QRcode1.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <title>QRCode generator</title>
     <meta name="description" content="QR Code Generator zobacz: Kazuhiko Arase">
-    <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="icon" type="image/x-icon" href="data:image/gif;base64,R0lGODlhEAAQAIAAAAAAAP///yH5BAEAAAEALAAAAAAQABAAAAImjI+pywv2oEQxhkofqLsf/E0XOFnc121lAqoqtV4NpFkM2eDzzhcAOw==">
     <style>
        div {float:left; padding:10px; margin:15px;}
        select {margin: 5px 10px 5px 0px;}
        pre {font-family: consolas,monospace; font-size: 4px; line-height: 4.8px;} /* txt */
        .pokaz {}
        .ukryj {display: none}
+    #githubLink {float: right; color:DarkBlue;font-size:0.8em; margin: 0 0 4px 4px; padding: 4px}
+    h3 {margin: 10px 0;}
      </style>
   </head>
   <body onload="body_loadHander('qr')">
-    <p><b>QR Code Generator</b>, <small> JavaScript: lic. <a href="https://pl.wikipedia.org/wiki/Licencja_MIT">MIT</a> - <a href="https://github.com/kazuhikoarase">Kazuhiko Arase</a>.
-    <a href="http://www.denso-wave.com/qrcode/faqpatent-e.html"><b>QR code<sup>®</sup></b> Denso Wave Incorporated</a>.
-    </small> </p>
+
+<div id="githubLink">
+  lic. <a href="https://pl.wikipedia.org/wiki/Licencja_MIT">MIT</a> - js. → <a href="https://github.com/kazuhikoarase">Kazuhiko Arase</a><br>
+  <a href="http://www.denso-wave.com/qrcode/faqpatent-e.html"><b>QR code<sup>®</sup></b> Denso Wave Incorporated</a>
+</div>
+<h3>QR Code - Generator</h3>
 
     <form name="qrForm">
     <div>
