--- a/download/jsQR_Demo1cam.html
+++ b/download/jsQR_Demo1cam.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8">
   <meta name="description" content="QR Code camera reader">
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/x-icon" href="data:image/gif;base64,R0lGODlhEAAQAIAAAAAAAP///yH5BAEAAAEALAAAAAAQABAAAAImjI+pywv2oEQxhkofqLsf/E0XOFnc121lAqoqtV4NpFkM2eDzzhcAOw==">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jsQR Demo 1 camera</title>
 <style>
